--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "clean": "rm -rf .next"
   },
   "dependencies": {
+    "axios": "^1.12.2",
+    "lightningcss": "^1.30.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
